--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <div class="mil-pos-abs mil-animation-2">
                     <div class="mil-reveal-frame">
                         <p class="mil-reveal-box"></p>
-                        <p class="mil-h3 mil-muted mil-thin">ashley.com</p>
+                        <!-- <p class="mil-h3 mil-muted mil-thin">ashley.com</p> -->
+                        <p class="mil-h3 mil-muted mil-thin">Healthus.com</p>
                     </div>
                 </div>
             </div>
