--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- ashley scss -->
     <link rel="stylesheet" href="css/style.css">
     <!-- page name -->
-    <title>Ashley</title>
+    <title>Healthus.ai</title>
 
 </head>
 
@@ -51,7 +51,7 @@
                     <div class="mil-reveal-frame">
                         <p class="mil-reveal-box"></p>
                         <!-- <p class="mil-h3 mil-muted mil-thin">ashley.com</p> -->
-                        <p class="mil-h3 mil-muted mil-thin">Healthus.com</p>
+                        <p class="mil-h3 mil-muted mil-thin">Healthus.ai</p>
                     </div>
                 </div>
             </div>
