--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="mil-menu-frame">
             <!-- frame clone -->
             <div class="mil-frame-top">
-                <a href="home-1.html" class="mil-logo">A.</a>
+                <a href="home-1.html" class="mil-logo">Healthus.ai</a>
                 <div class="mil-menu-btn">
                     <span></span>
                 </div>
