--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <div class="mil-pos-abs mil-animation-1">
                     <p class="mil-h3 mil-muted mil-thin">Pioneering</p>
                     <p class="mil-h3 mil-muted">Creative</p>
+                    <p class="mil-h3 mil-muted mil-thin">Healthcare</p>
                     <p class="mil-h3 mil-muted mil-thin">Excellence</p>
                 </div>
                 <div class="mil-pos-abs mil-animation-2">
@@ -70,7 +71,7 @@
             <div class="mil-frame-top">
                 <a href="home-1.html" class="mil-logo">Healthus.ai</a>
                 <div class="mil-menu-btn">
-                    <span></span>
+                    <span>Healthus.ai</span>
                 </div>
             </div>
             <!-- frame clone end -->
@@ -229,7 +230,7 @@
                         <div class="container">
                             <div class="mil-banner-content mil-up">
 
-                                <h1 class="mil-muted mil-mb-60">Designing <span class="mil-thin">a Better</span><br> World <span class="mil-thin">Today</span></h1>
+                                <h1 class="mil-muted mil-mb-60"> <span class="mil-thin">"transforming Health, Digitally"</span><br>  <span class="mil-thin"></span></h1>
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
