--- a/index.html
+++ b/index.html
@@ -234,10 +234,12 @@
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
-                                        <p class="mil-light-soft mil-mb-60">If healthcare marketing feels like pulling teeth, it’s time we talked! At Healthus.ai, we understand the struggle. The red tape. The patient trust factor. The endless compliance loops. And somehow, you’re still expected to market your brand like a rock star while keeping it all together.
-That’s exactly why we exist.
-This isn’t just a creative agency with a nice font library. We’re healthcare marketing specialists who speak your language. We know what HIPAA means for your headlines. We know how to keep things compliant without making them lifeless. And we definitely know how to make your brand feel like something people actually want to engage with.
-Need a website that patients find before page five of Google? Content that simplifies the science without dumbing it down? A brand that looks as trustworthy as your care actually is? Let’s just say you’re in the right place.
+                                        <p class="mil-light-soft mil-mb-60">If healthcare marketing feels like pulling teeth, it’s time we talked! At Healthus.ai, we get it—the red tape, patient trust, compliance loops—and still, you're expected to market like a rock star. That’s why we exist.
+
+We’re a healthcare digital marketing agency that speaks your language. We know what HIPAA means for your headlines, how to stay compliant without sounding dull, and how to make your brand truly engaging.
+
+Need a site patients actually find? Content that simplifies science? A brand that feels as trustworthy as your care? You’re in the right place.
+
 Smart. Creative. Human. That’s Healthus.ai.</p>
 
                                     </div>
