--- a/index.html
+++ b/index.html
@@ -234,13 +234,7 @@
                                 <div class="row">
                                     <div class="col-md-7 col-lg-5">
 
-                                        <p class="mil-light-soft mil-mb-60">If healthcare marketing feels like pulling teeth, it’s time we talked! At Healthus.ai, we get it—the red tape, patient trust, compliance loops—and still, you're expected to market like a rock star. That’s why we exist.
-
-We’re a healthcare digital marketing agency that speaks your language. We know what HIPAA means for your headlines, how to stay compliant without sounding dull, and how to make your brand truly engaging.
-
-Need a site patients actually find? Content that simplifies science? A brand that feels as trustworthy as your care? You’re in the right place.
-
-Smart. Creative. Human. That’s Healthus.ai.</p>
+                                        <p class="mil-light-soft mil-mb-60">Healthcare is complicated. Your marketing doesn’t have to be. At Healthus.ai, we’re a digital healthcare marketing agency that turns clinical into clickable, compliance into creativity, and strategy into real results. This is where healthcare brands ditch the dull and get human, high-impact marketing. From standout SEO to patient-friendly websites, we blend deep industry knowledge with bold ideas.</p>
 
                                     </div>
                                 </div>
